fixes: python-pypresence-git: maintainer's email

--- a/python-pypresence-git/PKGBUILD
+++ b/python-pypresence-git/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: Wachid Adi Nugroho < gmail-com: wachidadinugroho.maya >
+# Maintainer: Wachid Adi Nugroho <wachidadinugroho.maya@gmail.com>
 
 pkgname='python-pypresence-git'
 pkgver=4.0.0.r0.g5717af4
